# compilation.hell

./: LICENSE  README.md
apis-fatorial/go/: README.md
apis-fatorial/go/framework-fiber/: Dockerfile  Makefile  go.mod  go.sum  main.go
apis-hello-world/c/http.server.level2/: main.c  server
apis-hello-world/c/http.server.simple/: api.web
apis-hello-world/dotnet/api/: Makefile  Startup.cs
apis-hello-world/dotnet/api-simple/: Makefile  api-simple.csproj
apis-hello-world/dotnet/api/Controllers/: WeatherForecastController.cs
apis-hello-world/dotnet/hello-console/: Makefile  hello-console.csproj
apis-hello-world/go/: README.md
apis-hello-world/go/stand.library/api-hello/: Dockerfile  Makefile
apis-hello-world/go/stand.library/api-hello2/: Dockerfile
apis-hello-world/go/stand.library/api-hello3/: Dockerfile  Makefile
apis-hello-world/js/http-api/: controller.js  index.js  package.json  server.js
apis-hello-world/rust/hello-world/: Makefile
apis-hello-world/rust/hello-world-api/: Makefile
c/http.server.simple/: main.c
dotnet/: global.json
dotnet/api/: Program.cs
dotnet/api-simple/: Program.cs
dotnet/api/Properties/: launchSettings.json
dotnet/hello-console/: Program.cs
go/: README.md
go/stand.library/api-hello/: Dockerfile  Makefile  api.hello  main.go
go/stand.library/api-hello2/: Dockerfile  Makefile  main.go
go/stand.library/api-hello3/: Dockerfile  main.go
rust/hello-world/: Cargo.toml  Dockerfile
rust/hello-world-api/: .gitignore  Cargo.toml  Dockerfile
rust/hello-world-api/src/: main.rs
