[package]
name = "hello-world-api"
version = "0.1.0"
authors = ["Leonardo <leogsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true

[[bin]]
name = "hello-world-api"

[dependencies]
#ctrlc = "3.1.6"
