[package]
name = "hello-world"
version = "0.1.0"
authors = ["Leonardo <leogsilva@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-world"

[dependencies]
